--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,45 @@ li a:hover:not(.active) {
 .active {
   background-color: #4CAF50;
 }
+
+.login{
+position: absolute;
+top: calc(50% - 75px);
+left: calc(50% - 200px);
+height: auto;
+width: auto;
+padding: 10px;
+z-index: 2;
+}
+
+.login input[type=text], select {
+  width: 150%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.login input[type=password], select {
+  width: 150%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  width: 150%;
+  background-color: #4CAF50;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-weight: bold;
+}
